--- a/src/package.json
+++ b/src/package.json
@@ -10,6 +10,8 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pg": "^8.11.3",
+    "sequelize": "^6.35.2"
   }
 }
