--- a/src/package.json
+++ b/src/package.json
@@ -1,10 +1,11 @@
 {
-  "type": "module",
   "name": "src",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "jest",
+    "migrate": "node ./bin/migrate.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -13,5 +14,8 @@
     "morgan": "~1.9.1",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
