--- a/src/package.json
+++ b/src/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "src",
   "version": "0.0.0",
   "private": true,
@@ -13,6 +14,7 @@
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "pg": "^8.11.3",
+    "pm2": "^5.3.0",
     "sequelize": "^6.35.2"
   },
   "devDependencies": {
