all tests passing, yeeehawwwww

--- a/src/package.json
+++ b/src/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "pm2": "pm2 start processes.json --no-daemon",
     "start": "node ./bin/www",
-    "test": "jest",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "migrate": "node ./bin/migrate.js"
   },
   "dependencies": {
@@ -16,8 +17,12 @@
     "pg": "^8.11.3",
     "pm2": "^5.3.0",
     "sequelize": "^6.35.2"
+
   },
   "devDependencies": {
     "jest": "^29.7.0"
+  },
+  "jest": {
+    "transform": {}
   }
 }
