--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "type": "module",
-  "name": "src",
+  "name": "customerbook",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -24,5 +24,8 @@
   },
   "jest": {
     "transform": {}
+  },
+  "bin": {
+    "www": "./bin/www.js"
   }
 }
