README updates, and db test. Data persists. Yay

--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "pm2": "pm2 start processes.json --no-daemon",
-    "start": "node ./bin/www",
+    "start": "node ./bin/www.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "migrate": "node ./bin/migrate.js"
   },
