--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "pm2": "pm2 start processes.json --no-daemon",
-    "start": "node ./bin/www.js",
+    "start": "node bin/www.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "migrate": "node ./bin/migrate.js"
   },
@@ -17,7 +17,6 @@
     "pg": "^8.11.3",
     "pm2": "^5.3.0",
     "sequelize": "^6.35.2"
-
   },
   "devDependencies": {
     "jest": "^29.7.0"
